css/style.css
html {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-family: 'Inconsolata', monospace;
    font-size: 10px;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.column {
    flex-direction: column;
}

#app {
    margin: auto;
    width: 300px;
    height: 90vh;
    align-items: center;
}

h1 {
    font-size: 50px;
    margin-top: 5px;
    margin-bottom: 10px;
}

p {
    text-align: center;
}

button {
    font-family: 'Inconsolata', monospace;
    cursor: pointer;
}

button:focus {
    outline: none;
}

.green {
    color: #29BF12;
}

.blue {
    color: #09B2CB;
}

.violet {
    color: #C4008C;
}

.red {
    color: #F21B3F;
}

.orange {
    color: #F75C03;
}

#controls {
    width: 300px;
    justify-content: space-around;
    margin-bottom: 10px;
}

.switch-box {
    width: 100px;
    margin-left: 2px;
    margin-right: 2px;
}

.switch-title {
    font-size: 15px;
    margin : 5px 0 5px 0;
    text-transform: lowercase;
}

#strict-box {
    align-items: flex-start;
}

#information-box { /* ToDo: vertical alignment */
    width: 92px;
    justify-content: flex-end;
}

#round-counter {
    display: none;
    border: none;
    background: none;
    font-size: 40px;
    font-weight: 700;
    margin: 0;
}

#start {
    text-transform: lowercase;
    border: none;
    background: none;
    font-size: 25px;
    font-weight: 700;
    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.23);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

#start:hover {
    text-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

#power-box {
    align-items: flex-end;
}

.game-field { /* FixMe: :active is not working if the field is in the sequence (has something to do with :before, :after?) */
    height: 146px;
    width: 146px;
    border: 4px solid black;
    margin: 2px;
    flex-direction: row;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.game-field:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

#green-button {
    background-color: #29BF12;
    border-color: #29BF12;
}

#blue-button {
    background-color: #09B2CB;
    border-color: #09B2CB;
}

#violet-button {
    background-color: #C4008C;
    border-color: #C4008C;
}

#red-button {
    background-color: #F21B3F;
    border-color: #F21B3F;
}

/* On/Off switch */ /* ToDo: needs to be styled */
.switch {
    position: relative;
    display: inline-block;
    width: 100px;
    height: 34px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: lightgray;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #F75C03;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(65px);
    -ms-transform: translateX(65px);
    transform: translateX(65px);
}

